// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applies templates 1`] = `
"( variable1 ) +
    (escapeHtml( variable2 )) +
    \\" and \\" +
    ( variable3 )"
`;

exports[`creates generators 1`] = `
Object {
  "js": " variable1 ",
  "rawJs": " variable1 ",
}
`;

exports[`creates generators 2`] = `
Object {
  "js": "escapeHtml( variable2 )",
  "rawJs": " variable2 ",
}
`;

exports[`creates generators 3`] = `
Object {
  "raw": " and ",
}
`;

exports[`creates generators 4`] = `
Object {
  "js": " variable3 ",
  "rawJs": " variable3 ",
}
`;

exports[`does simple interpolation 1`] = `
Object {
  "jsTemplateReplacements": Array [],
}
`;

exports[`does simple interpolation 2`] = `
Object {
  "jsTemplateReplacements": Array [
    " variable1 ",
    "escapeHtml( variable2 )",
  ],
}
`;

exports[`does simple interpolation 3`] = `"~~ replacement 0 ~~ and ~~ replacement 1 ~~"`;

exports[`does simple interpolation 4`] = `
"\\"\\" +
    ( variable1 ) +
    \\" and \\" +
    (escapeHtml( variable2 )) +
    \\"\\""
`;

exports[`preprocess ignores non-strings 1`] = `
Object {
  "jsTemplateReplacements": Array [],
}
`;

exports[`preprocess ignores non-strings 2`] = `7`;
